--- a/app/src/main/res/layout/issues_item.xml
+++ b/app/src/main/res/layout/issues_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/ic_baseline_person_24" />
 
     <TextView
         android:id="@+id/userName"
